# Underactuated

./: README.md
environment/: animation.py
quad-planar/: .gitignore  TODO.md  agent_episode_0.path  devlog.md  main.py  pyproject.toml  run_vpg_human.py  test.py  vpg.md  vpg_model.pkl
quad-planar/.ipynb_checkpoints/: main-checkpoint.py  testing-checkpoint.ipynb
quad-planar/agent/: networks.py  networks_old.py  ppo.py  ppo_old.py  vpg.py
quad-planar/agent/.ipynb_checkpoints/: networks-checkpoint.py
quad-planar/env/: __init__.py  environment.py  quadcopter.py  render.py
quad-planar/environment/: __init__.py  environment.py  quadcopter.py  render.py
quad-planar/environment/.ipynb_checkpoints/: render-checkpoint.py
quad-planar/trained/: agent_episode_0.path  agent_episode_0.pt  agent_episode_1000.path  agent_episode_1000.pt  agent_episode_2000.path  agent_episode_2000.pt  agent_episode_3000.path  agent_episode_3000.pt  agent_episode_4000.path  agent_episode_4000.pt  agent_episode_5000.pt  agent_episode_6000.pt  agent_episode_7000.pt  agent_episode_8000.pt  agent_episode_9000.pt  policy.pth
quad_2d_environment/: animation.py  quadcopter.py
