[project]
name = "quad-planar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "gymnasium>=1.2.2",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "setproctitle>=1.3.7",
    "stable-baselines3>=2.7.0",
    "torch>=2.9.1",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
]
